# Talent-plan

./: README.md
rust-lesson/kv-project/: .gitignore  Cargo.toml
rust-lesson/kv-project/learn/: learn.md
rust-lesson/kv-project/src/: error.rs  kv.rs  lib.rs
rust-lesson/kv-project/tests/: test_2.rs
rust-lesson/project-1/: Cargo.toml
rust-lesson/project-1/src/: kv.rs  lib.rs
