[package]
name = "kvs"
version = "0.1.0"
authors = ["evpeople <hangcaihui@gmail.com>"]
description = "A key-value store"
edition = "2018"
license = "MIT"
repository="https://github.com/evpeople/Talent-plan/tree/master/rust/projects/project-1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
[lib]
test = false 
doctest = true 
[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = { version = "4.3.0", features = ["derive", "cargo"] }
