[package]
name = "kvs"
version = "0.1.0"
authors = ["evpeople <hangcaihui@gmail.com>"]
description = "A key-value store"
edition = "2018"
license = "MIT"
repository="https://github.com/evpeople/Talent-plan/tree/master/rust/projects/project-1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
[lib]
test = false 
doctest = true 
[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
