[package]
name = "kvs"
version = "0.1.0"
authors = ["evpeople <hangcaihui@gmail.com>"]
description = "A key-value store"
edition = "2018"
about = "嘎嘎aga"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
[lib]
test = false 
doctest = false
[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = { version = "4.3.0", features = ["derive", "cargo"] }
